[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
libp2p = { version = "0.56.0", features = [
    "tokio",
    "dns",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
] }
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = { features = ["env-filter"], version = "*" }
