[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.14"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = [
    "tokio",
    "dns",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "gossipsub",
] }
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = { features = ["env-filter"], version = "*" }
serde = { version = "1.0", features = ["derive"] }
